2.3.0 (unreleased)
------------------


2.2.0 (2017-06-19)
------------------
 - Automatically import the soap-encoding schema if it is required (#473)
 - Add support for XOP messages (this is a rewrite of #325 by vashek)


2.1.1 (2017-06-11)
------------------
 - Fix previous release, it contained an incorrect dependency (Mock 2.1.) due
   to bumpversion :-(


2.1.0 (2017-06-11)
------------------
 - Fix recursion error while creating the signature for a global element when
   it references itself (via ref attribute).
 - Update Client.create_message() to apply plugins and wsse (#465)
 - Fix handling unknown xsi types when parsing elements using xsd:anyType (#455)


2.0.0 (2017-05-22)
------------------

This is a major release, and contains a number of backwards incompatible
changes to the API.

 - Default values of optional elements are not set by default anymore (#423)
 - Refactor the implementation of wsdl:arrayType too make the API more
   pythonic (backwards incompatible).
 - The call signature for Client.create_message() was changed. It now requires
   the service argument:

     ``Client.create_message(service, operation_name, *args, **kwargs)``

 - Choice elements now only work with keyword arguments and raise an exception
   if positional arguments are passed (#439)
 - Implement initial multiref support for SOAP RPC (#326). This was done using
   really good real-world tests from vstoykov (thanks!)
 - Fix exception on empty SOAP response (#442)
 - Fix XSD default values for boolean types (Bartek Wójcicki, #386)


1.6.0 (2017-04-27)
------------------
 - Implement ValueObject.__json__ for json serialization (#258)
 - Improve handling of unexpected elements for soap:header (#378)
 - Accept unexpected elements in complexTypes when strict is False
 - Fix elementFormDefault/attributeFormDefault for xsd:includes (#426)


1.5.0 (2017-04-22)
------------------
 - Fix issue where values of indicators (sequence/choice/all) would